# axm

./: .gitignore  ANCESTOR_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
examples/: chat_demo.py  derive.md  incremental_demo.py  intake_demo.py  palantir_10k.txt  sample_10k.xbrl  sample_calendar.ics
rust/axm-rs/: Cargo.toml
rust/axm-rs/src/: bin.rs  coords.rs  ir.rs  lib.rs  program.rs  space.rs  wasm.rs
src/axm/: __init__.py  chat.py  cli.py  compiler.py  coords.py  emitter.py  executor.py  ids.py  intake.py  ir.py  lexer.py  parser.py  program.py  space.py
src/axm/derive/: __init__.py  confidence.py  engine.py  strategies.py  temporal.py
tests/: conftest.py  test_axm.py  test_derivations.py  test_derive.py  test_rust_parity.py
web/: app.js  index.html  package.json
