[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axm"
version = "0.5.2"
description = "Semantic compiler: compile documents into queryable coordinate programs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["semantic-compiler", "knowledge-graph", "coordinates", "llm", "air-gap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
ollama = ["requests"]
anthropic = ["anthropic"]
openai = ["openai"]
all = ["requests", "anthropic", "openai"]

[project.scripts]
axm = "axm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
